force-app/main/default/objects/Research_Output_Classification_Code__c/Research_Output_Classification_Code__c.object-meta.xml
<CustomObject>
    <label>Research Output Classification Code</label>
    <nameField>
        <displayFormat>RO-{00000}</displayFormat>
        <label>Research Output Classification Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Output Classification Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>