force-app/main/default/objects/Research_Output_Classification_Code__c/fields/I_RS_Classification_Code_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Classification_Code_Type__c</fullName>
    <formula>TEXT(I_RS_Classification_Master__r.I_RS_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Code Type</label>
    <type>Text</type>
</CustomField>