force-app/main/default/objects/Research_Output_Classification_Code__c/fields/I_RS_Classification_Master__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Classification_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Master</label>
    <referenceTo>Classification_Master__c</referenceTo>
    <relationshipLabel>Research Output Classification Codes</relationshipLabel>
    <relationshipName>Research_Output_Classification_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>