force-app/main/default/objects/Research_Output_Classification_Code__c/fields/I_RS_Classification_Master_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Classification_Master_Code__c</fullName>
    <formula>I_RS_Classification_Master__r.I_RS_Classification_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Master Code</label>
    <type>Text</type>
</CustomField>