force-app/main/default/objects/Research_Output_Classification_Code__c/fields/I_RS_Disable_Grid_Validation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Disable_Grid_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn off certain validation for this particular row. Useful when overriding the standard rules.

Not used in editable grid yet - reserved for future use there, though.</description>
    <label>Disable Grid Validation</label>
    <type>Checkbox</type>
</CustomField>