force-app/main/default/objects/Research_Output_Classification_Code__c/fields/I_RS_Inactive_for_Non_Admins__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Inactive_for_Non_Admins__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&apos;Soft-deleted&apos; variable that hides this row from various UIs</description>
    <inlineHelpText>&apos;Soft-deleted&apos; variable that hides this row from various UIs</inlineHelpText>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>