force-app/main/default/objects/Research_Output_Classification_Code__c/fields/I_RS_Percentage__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Percentage__c</fullName>
    <label>Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>