force-app/main/default/objects/Research_Output_Classification_Code__c/fields/I_RS_Research_Output__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output__c</fullName>
    <label>Research Output</label>
    <referenceTo>Research_Output__c</referenceTo>
    <relationshipLabel>Classification Codes</relationshipLabel>
    <relationshipName>Research_Output_Classification_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>