force-app/main/default/objects/Research_Output_Classification_Code__c/fields/I_RS_Research_Output_Publication_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output_Publication_Year__c</fullName>
    <formula>TEXT(YEAR(I_RS_Research_Output__r.I_RS_Publication_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Output Publication Year</label>
    <type>Text</type>
</CustomField>