force-app/main/default/objects/Research_Output_Classification_Code__c/fields/I_RS_World_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>I_RS_World_Benchmark__c</fullName>
    <label>World Benchmark</label>
    <precision>11</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>